<resources>
    <string name="hello">Hello World, DaMuZhiActivity!</string>
    <string name="app_name">大拇指旅行</string>
    <string name="ok">确定</string>
    <string name="connection_error">无法连接到网络，请检查网络配置</string>
    <string name="not_more_data">暂时没有更多更新信息</string>
    <string name="not_enough_memory">剩余内存空间不足，请删除部分文件</string>
    <string name="get_sdcard_fail">SD卡读取失败</string>
    <string name="no_history_data">暂没有您浏览过的内容</string>
    <string name="app_has_new_version">应用有更新</string>
    <string name="map">地图</string>
    <string name="list">列表</string>
    <string name="set_ctiy_tips">您已设置查看</string>
    <string name="google_map_not_found1">您的手机系统缺少google地图组件，部分功能可能无法使用</string>
    <string name="google_map_not_found2">您的手机系统缺少google地图组件，功能无法使用</string>
    <string name="not_data">暂时没有更多数据！</string>
    <string name="city_guide">城市指南 - </string>
    <string name="local_route">本地游 - </string>
    <string name="app_help">应用帮助</string>
    <string name="new_version_tips">新版本升级提示</string>
    <string name="new_city_data_tips">新数据包升级提示</string>
    <string name="message_tips">消息通知</string>
    <string name="chanel_not_open_toast">栏目暂未开放</string>
    <string name="update_city_data_content">有新的城市指南信息升级，是否现在更新？</string>
    <string name="get_location_ing2">定位中...</string>
    <string name="index">首页</string>
	<string name="damuzhi">大拇指旅行 - </string>
	<string name="scenery">景点</string>
	<string name="hotel">酒店</string>
	<string name="restaurant">餐馆</string>
	<string name="shopping">购物</string>
	<string name="entertainment">娱乐</string>
	<string name="nearby">附近</string>
	<string name="city_base">城市概况</string>
	<string name="travel_prepration">旅行准备</string>
	<string name="travel_utility">实用信息</string>
	<string name="travel_transportaion">城市交通</string>
	<string name="travel_note">游记攻略</string>
	<string name="travel_commend">线路推荐</string>
	<string name="help">帮助</string>
	<string name="collection">收藏</string>
	<string name="share">分享</string>
	<string name="more">更多</string>
	<string name="back">返回</string>
	<string name="more_open_city">已开通城市</string>
	<string name="more_browser_history">浏览记录</string>
	<string name="more_feedback">意见反馈</string>
	<string name="more_update_version">版本更新</string>
	<string name="more_about_damuzhi">关于大拇指旅行</string>
	<string name="more_positive_criticism">给我们一个好评吧</string>
	<string name="more_list_image">列表中显示图片</string>
	<string name="more_good_commend">精彩应用推荐</string>
	<string name="no_good_commend">暂没有推荐的应用</string>
	<string name="submit">提交</string>
	<string name="clear">清空</string>
	<string name="clear_title">确定要清空浏览记录</string>
	<string name="feedback_content_tips">请输入您的意见或建议：（不超过150字）</string>
	<string name="feedback_content_hint">请输入您的建议或意见！</string>
	<string name="feedback_conn_tips">您的E-mail或手机号码（不超过80字）</string>
	<string name="feedback_conn_hint">您的E-mail或手机号码</string>
	<string name="feedback_content_emtpy">请输入您的意见或建议</string>
	<string name="feedback_contact_emtpy">请输入您的E-mail或手机号码</string>
	<string name="feedback_contact_error">请输入正确的E-mail或手机号码</string>
	<string name="feedback_submit_success">提交成功，感谢您的意见和建议</string>
	<string name="feedback_submit_fail">提交失败</string>
	<string name="about_damuzhi">关于大拇指旅行</string>
	<string name="my_concern">我的关注</string>
	<string name="user_info">个人资料</string>
	<string name="share_to_friend">推荐给好友</string>
	<string name="non_member_order_list">非会员订单查询</string>
	<string name="order_manager">订单管理</string>
	<string name="member_login">会员登录</string>
	<string name="login_exit">退出登录</string>
	<string name="city_list">城市列表</string>
	<string name="download_manager">下载管理</string>
	<string name="online">在线</string>
	<string name="new_version">已经是最新版本</string>
	<string name="search_tips">请输入城市名称或者首字母</string>
	<string name="open_city_tips1">提前下载离线城市数据，可以节省流量和提高打开速度,更多城市即将开通！</string>
	<string name="open_city_tips2">更多城市指南即将开通...</string>
	<string name="success">下载完成</string>
    <string name="error">下载失败</string>
    <string name="sdcarderror">SDCard不存在或者写保护</string>
    <string name="download">下载</string>
    <string name="pause_download">暂停</string>
    <string name="restart_download">开始</string>
    <string name="review_online">在线导览</string>
    <string name="install">安装</string>
    <string name="installing">安装中...(约2分钟)</string>
	<string name="installed">已安装</string>
	<string name="delete">删除</string>
	<string name="download_connection_error">下载链接失败</string>
	<string name="did_not_download_anything">您还没有下载离线数据包</string>
	<string name="delete_install_data">你确定要删除这个离线数据包</string>
	<string name="update">更新</string>
	<string name="update_now">立即更新</string>
	<string name="update_later">以后再说</string>
	<string name="data_has_new_version">离线数据包有更新</string>
	<string name="install_data_unfinish">上次有离线数据包安装未完成</string>
	<string name="install_now">继续安装</string>
	<string name="install_later">以后再说</string>
	<string name="start_download">开始下载</string>
	<string name="stop_download">已暂停</string>
	<string name="cancel_download">已删除</string>
	<string name="cancel_download_toast">确定要取消这个下载任务</string>
	<string name="install_fail">离线包安装失败</string>
	<string name="search_empty_tips">没有搜索到相关城市</string>
    <string name="main_fetch_fail">网络异常</string>
	<string name="conn_fail_exception">无法连接到网络，请检查网络配置</string>
    <string name="scenery_title">景点(0)</string>
    <string name="loading">数据加载中...</string>
    <string name="loading2">加载中</string>
    <string name="all_place">全部</string>
    <string name="sort">排序</string>
    <string name="price">价格</string>
    <string name="sub_category">分类</string>
    <string name="area">区域</string>
    <string name="service">服务</string>
    <string name="food">菜系</string>
    <string name="start3">三星级</string>
    <string name="start4">四星级</string>
    <string name="start5">五星级</string>
    <string name="start6">六星级</string>
    <string name="start7">七星级</string>
    <string name="hotelIntro">酒店简介</string>
    <string name="hotelStart">酒店星级</string>
    <string name="key_word">推荐理由</string>
    <string name="hotelRoomPrice">房间价格</string>
    <string name="trafficLocation">位置</string>
    <string name="trafficDistance">距酒店</string>
    <string name="restaurant_intro">餐馆简介</string>
    <string name="food_type">菜式类型</string>
    <string name="open_time1">营业时间</string>
    <string name="avg_price">人均消费</string>
    <string name="special_food">特色菜式</string>
    <string name="shop_intro">商家简介</string>
    <string name="entertrainment_intro">商家简介</string>
    <string name="park">停车指南</string>
    <string name="shopping_tips">购物贴士</string>
    <string name="entertainment_tips">玩乐贴士</string>
    <string name="nearby_title">周边推荐</string>
    <string name="collect">收藏本页</string>
    <string name="collected">已收藏</string>
    <string name="data_not_found">未找到相关信息</string>
    <string name="my_nearby">我的附近</string>
    <string name="spot_intro">景点介绍</string>
    <string name="ticketsPrice">门票价格</string>
    <string name="free">免费</string>
    <string name="open_time">开放时间</string>
    <string name="trafficInfo">交通信息</string>
    <string name="tour_tips">游览贴士</string>
    <string name="phone_number">电话: </string>
    <string name="website">网站: </string>
    <string name="address">地址: </string>
    <string name="refresh">刷新</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="meter">米</string>
    <string name="kilometer">公里</string>
    <string name="make_phone_call">你确定要拨打此号码?</string>
    <string name="call">拨打</string>
    <string name="leave_alert_dilaog">确认退出大拇指旅行？</string>
    <string name="share_content">我发现了一款非常专业的旅游指南《大拇指旅行》，
        非常适合我们外出旅游使用，快下载来看看吧：
   http://itoptrip.com/android
   </string>
   <string name="share_2_by_message">短信</string>
   <string name="share_2_sina_title">分享到新浪微博</string>
   <string name="share_2_qq_title">分享到腾讯微博</string>
   <string name="share_success">分享成功</string>
   <string name="share_fail">分享失败</string>
   <string name="repeat_content_error">同一内容不允许多次发送，请修改分享内容</string>
    <string name="my_collected">我的收藏</string>
    <string name="collect_rank">收藏排行</string>
    <string name="no_favorite">暂无收藏信息</string>
    <string name="delete_favorite">确定要删除收藏信息?</string>
    <string name="get_location_fail">定位失败</string>
    <string name="open_gps_tips">请打开GPS定位</string>
    <string name="open_gps_tips2">您未开启GPS定位功能，请到手机设置</string>
    <string name="open_gps_tips3">您未开启GPS定位功能，无法获取当前位置，请到手机设置</string>
    <string name="get_location_ing">获取当前位置中，请稍后...</string>
    <string name="go_to_gps_setting_tips">是否跳到GPS设置页面</string>
    <string name="current_location">当前位置</string>
    <string name="consult">咨询</string>
    <string name="route_introduce">产品介绍</string>
    <string name="booking_notice">预订说明</string>
    <string name="user_feedback">用户反馈</string>
    <string name="route_detail">线路详情</string>
    <string name="follow_route">关注线路</string>
    <string name="qi">起</string>
    <string name="booking_route">线路预订</string>
    <string name="route_name">路线名称：</string>
    <string name="route_id">路线编号：</string>
    <string name="depart_place">出发地点：</string>
    <string name="depart_place_title">出发地点</string>
    <string name="depart_place_title_2">出发集中地点</string>
    <string name="depart_time">出发时间：</string>
    <string name="depart_time_title">出发时间</string>
    <string name="depart_number">出发人数：</string>
    <string name="depart_city">出发城市：</string>
    <string name="route_booking_number">出游人数</string>
     <string name="route_booking_number2">出游人数：</string>
    <string name="route_price">参考价格：</string>
    <string name="shuo_ming">说明：</string>
    <string name="booking_notice_content">预订成功后，系统将会通过手机短信通知您订单预订情况，稍后会客服会通过电话联系您确认订单。</string>
    <string name="select_depart_place">请选择出发地点</string>
    <string name="select_depart_time">请选择出发时间</string>
    <string name="member_booking">会员确认预订</string>
    <string name="non_member_booking">非会员确认预订</string>
    <string name="adult_count">成人1位</string>
    <string name="children_count">儿童0位</string>
    <string name="booking_confirm">确认预订</string>
    <string name="contact_person">联系人    ：</string>
    <string name="contact">联系电话：</string>
    <string name="contact_person_hint">请输入您的姓名</string>
    <string name="contact_hint">请输入您的手机号码</string>
    <string name="contact_toast">请输入完整的手机号码</string>
    <string name="select_depart_place_toast">请选择出发地点</string>
    <string name="select_depart_time_toast">请选择出发时间</string>
    <string name="tourist_route_order_list">订单详情</string>
    <string name="booking_time">预订时间：</string>
    <string name="damuzhi_price">大拇指价：</string>
    <string name="booking_status">订单状态：</string>
    <string name="route_feedback">线路评价</string>
    <string name="no_local_route">当前城市暂未开通本地游线路</string>
    <string name="user_register">免费注册</string>
    <string name="forget_password">找回密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="free_register">免费注册</string>
    <string name="register_account">注册账号</string>
    <string name="user_name">用户名：</string>
    <string name="user_name_hint">请输入您的手机号码</string>
    <string name="password">密码：</string>
    <string name="password_hint">6个字符以上</string>
    <string name="confirm_password">确认密码：</string>
    <string name="confirm_password_hint">请重复上面的密码</string>
    <string name="get_password">找回密码</string>
    <string name="change_password">密码修改</string>
    <string name="old_password">原密码：</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password">新密码：</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="new_password_confirm_hint">再次输入新密码</string>
    <string name="nick_name">昵称：</string>
    <string name="nick_name_hint">请输入您的昵称</string>
    <string name="name">姓名：</string>
    <string name="name_hint">请输入您的真实姓名</string>
    <string name="email">邮箱：</string>
    <string name="email_hint">请输入邮箱地址</string>
</resources>