<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/all_page_bg2"
    android:orientation="vertical" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topmenu_bg"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/register_account"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/help_mini_button"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/reg_1"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:paddingRight="16dp"
            android:text="@string/user_name"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="phone"
            android:hint="@string/user_name_hint"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/reg_2"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:paddingRight="16dp"
            android:text="@string/password"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/reg_3"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="right"
            android:textColor="@android:color/black"
            android:paddingRight="16dp"
            android:text="@string/confirm_password"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>
   

</LinearLayout>