<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/all_page_bg2"
    android:orientation="vertical" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topmenu_bg"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/user_info"
            android:textColor="@android:color/white"
            android:textSize="20.0sp" />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/help_mini_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/reg_1"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="3dp"
            android:gravity="right"
            android:text="@string/user_name"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/change_password_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/reg_3" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="3dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/change_password"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/go_btn" 
            android:scaleType="fitCenter"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/reg_1"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="3dp"
            android:gravity="right"
            android:text="@string/nick_name"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/nick_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@null"
            android:hint="@string/nick_name_hint"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/reg_2"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="3dp"
            android:gravity="right"
            android:text="@string/name"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/name_hint"
            android:textSize="15sp" />
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/reg_3"
        android:gravity="center_vertical" >
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="3dp"
            android:gravity="right"
            android:text="@string/email"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/email_hint"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>