<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_page_bg2"
    android:orientation="vertical" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topmenu_bg"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/place_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/get_password"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/help_mini_button"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingRight="3dp"
            android:textColor="@android:color/black"
            android:gravity="right"
            android:text="@string/phone_number"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/telephone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>